# FurniFab

./: .env  .gitignore  BUILDING.md  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: BUILDING.md  USER_MANUAL.md
.github/workflows/: build.yml  eslint.yml  release.yml  rust-clippy.yml  rust.yml
F2,rj,pmtn,Cmax/: BB.py  Johnson_ver2.py  file_pa.txt  pa.py  result_pa.txt
algo/F2,rj,pmtn,Cmax/: BB  BB.py  Horn.py  Johnson.py  Johnson_ver2.py  automatic_tests.py  automatic_tests_pa.py  automatic_tests_part2.py  automiatic_tests_part2.py  bb.py  controller.py  file_pa.txt  input.txt  input_johnson.txt  neh.py  neh2.py  pa.py  result_pa.txt  run_algo.py  vns.py
algo/max_flow_min_cost/: file_mag.txt  file_negative_cycle_x1.txt  file_negative_cycle_x2.txt  ford_fulkerson.py  negative_cycle_removal.py
algo/scheduling_conflicts/: Cargo.toml  example_input.txt
lib/aarch64-pc-windows-msvc/: binpacking_lib.lib
lib/x86_64-pc-windows-msvc/: binpacking_lib.lib
release/: version.json
script/: build.py  deploy.py  generator.py  release.py
snapshot/: index.html  version.json
src/: App.vue  api.ts  interface.ts  main.ts  router.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: data.json
src-tauri/src/: conflicts.rs  data.rs  flow.rs  lib.rs  main.rs  max_flow_min_cost.rs  python.rs
src-tauri/src/bin_packing/: bindings.rs  mod.rs
src-tauri/src/python3api/: bindings.rs  mod.rs
(+50 files in other folders)
