[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
parking_lot = "0.12"
scheduling_conflicts = { version = "0.1", path = "../algo/scheduling_conflicts" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["updater", "process-command-api"] }
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
